# babypandas

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yaml  publish-to-pypi_dev.yaml  run-tests-on-push.yaml
babypandas/: Untitled.ipynb  __init__.py  babypandas.py  bpd test.ipynb  bpd.py  bpd_1.py  bpd_2.py  bpd_old.py  util.py  utils.py
docs/: DataFrame.rst  GroupBy.rst  Series.rst  conf.py  index.rst
docs/_autosummary/: bpd.DataFrame.__init__.rst  bpd.DataFrame.append.rst  bpd.DataFrame.apply.rst  bpd.DataFrame.assign.rst  bpd.DataFrame.describe.rst  bpd.DataFrame.drop.rst  bpd.DataFrame.from_dict.rst  bpd.DataFrame.from_records.rst  bpd.DataFrame.get.rst  bpd.DataFrame.groupby.rst  bpd.DataFrame.merge.rst  bpd.DataFrame.plot.rst  bpd.DataFrame.reset_index.rst  bpd.DataFrame.sample.rst  bpd.DataFrame.set_index.rst  bpd.DataFrame.sort_values.rst  bpd.DataFrame.take.rst  bpd.DataFrame.to_csv.rst  bpd.DataFrame.to_numpy.rst  bpd.DataFrameGroupBy.count.rst  bpd.DataFrameGroupBy.max.rst  bpd.DataFrameGroupBy.mean.rst  bpd.DataFrameGroupBy.median.rst  bpd.DataFrameGroupBy.min.rst  bpd.DataFrameGroupBy.size.rst  bpd.DataFrameGroupBy.sum.rst  bpd.Series.__init__.rst  bpd.Series.abs.rst  bpd.Series.apply.rst  bpd.Series.count.rst  bpd.Series.describe.rst  bpd.Series.max.rst  bpd.Series.mean.rst  bpd.Series.median.rst  bpd.Series.min.rst  bpd.Series.plot.rst  bpd.Series.reset_index.rst  bpd.Series.sample.rst  bpd.Series.sum.rst  (+4 more)
examples/: example.py
tests/: test_df.py  test_ser.py
(+1 files in other folders)
